# Thalassa

./: .gitignore  README.md  pyproject.toml
iac/local/: metallb.yaml
iac/local/airflow/: values.yaml
iac/local/mongodb/: values.yaml
iac/spark/: role.yaml  role_binding.yaml  service_account.yaml
iac/spark/jobs/: count_words.yaml
src/: .env.local.example  Makefile  __init__.py  logging.cfg  settings.py
src/core/: __init__.py  settings.py
src/core/adapters/persistence/mongodb/repositories/: __init__.py  tweet_repository.py  twitter_user_repository.py
src/core/domain/models/: tweet.py  twitter_user.py
src/core/infrastructure/: mongodb.py
src/core/ports/persistence/: __init__.py  tweet_repository.py  twitter_user_repository.py
src/etl/: Dockerfile.airflow  Dockerfile.spark
src/etl/connectors/: twitter.py
src/etl/dags/: test.py
src/etl/spark_jobs/: clean_tweets.py  count_words.py  import_tweets_from_csv.py  join_tweets_with_users.py  preprocess_tweets.py
