[tool.poetry]
name = "thalassa"
version = "0.0.1"
description = ""
authors = ["Uladzislau Stasheuski <fnsdevelopment@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.2"
python-dotenv = "^0.21.0"
tweepy = "^4.10.1"
pymongo = "^4.2.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pyspark = "^3.3.1"
black = "^23.1.0"
isort = "^5.12.0"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 100
profile = "black"
combine_as_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
